[gd_scene format=3 uid="uid://c5fifteen002"]

[ext_resource type="Script" uid="uid://btet8bq270382" path="res://src/minigames/fifteen_demo.gd" id="1_demo"]
[ext_resource type="PackedScene" uid="uid://c5fifteen001" path="res://scenes/minigames/fifteen_puzzle.tscn" id="2_puzzle"]

[node name="FifteenDemo" type="Control" unique_id=217099357]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="Background" type="ColorRect" parent="." unique_id=551796499]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="PuzzleContainer" type="CenterContainer" parent="." unique_id=942230218]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FifteenPuzzle" parent="PuzzleContainer" unique_id=978592043 instance=ExtResource("2_puzzle")]

[node name="UI" type="VBoxContainer" parent="." unique_id=103396911]
layout_mode = 0
offset_left = 500.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 373.0
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="UI" unique_id=91278799]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fifteen Puzzle"

[node name="GridSettings" type="VBoxContainer" parent="UI" unique_id=1083074005]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RowsLabel" type="Label" parent="UI/GridSettings" unique_id=1133188525]
layout_mode = 2
text = "Rows:"

[node name="RowsSpin" type="SpinBox" parent="UI/GridSettings" unique_id=612251206]
layout_mode = 2
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="ColsLabel" type="Label" parent="UI/GridSettings" unique_id=1058293692]
layout_mode = 2
text = "Columns:"

[node name="ColsSpin" type="SpinBox" parent="UI/GridSettings" unique_id=1342495383]
layout_mode = 2
min_value = 2.0
max_value = 8.0
value = 4.0

[node name="DifficultySettings" type="VBoxContainer" parent="UI" unique_id=271627782]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DifficultyLabel" type="Label" parent="UI/DifficultySettings" unique_id=2041084675]
layout_mode = 2
text = "Difficulty:"

[node name="DifficultySlider" type="HSlider" parent="UI/DifficultySettings" unique_id=420990339]
layout_mode = 2
min_value = 5.0
max_value = 200.0
step = 5.0
value = 50.0

[node name="DifficultyValue" type="Label" parent="UI/DifficultySettings" unique_id=1862800310]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "50 moves"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="UI" unique_id=1265348124]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LoadButton" type="Button" parent="UI/Buttons" unique_id=2020145181]
layout_mode = 2
text = "Load Image..."

[node name="ResetButton" type="Button" parent="UI/Buttons" unique_id=910258086]
layout_mode = 2
text = "Reset Puzzle"

[node name="DevModeCheck" type="CheckBox" parent="UI"]
layout_mode = 2
text = "Developer Mode (RMB swap)"

[node name="FileDialog" type="FileDialog" parent="." unique_id=304943408]
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp", "*.bmp")

[connection signal="pressed" from="UI/Buttons/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="UI/Buttons/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
